src/test/deca/context/invalid/created/binary_exp/op_comp/neq_float_boolean.deca
// Description :
//    test neq entre un float et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Opérandes de type float, boolean, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{
float a;
boolean b;
boolean c = a != b;
}
